Added in processing of Choice in SubscriberUe
