# pkg/aether_2_0_0/server/aether-2.0.0-gnmi.go
@@ -1088,207 +1088,6 @@ func (i *ServerImpl) gnmiPostSubscriberUe(ctx context.Context, body []byte,
 	return utils.ExtractExtension100(gnmiSetResponse), nil
 }
 
-// gnmiDeleteSubscriberUeImsi deletes an instance of Subscriber_Ue_Imsi.
-func (i *ServerImpl) gnmiDeleteSubscriberUeImsi(ctx context.Context,
-	openApiPath string, target types.Target, args ...string) error {
-
-	gnmiSet, err := utils.NewGnmiSetDeleteRequest(openApiPath, string(target), args...)
-	if err != nil {
-		return err
-	}
-	log.Infof("gnmiSetRequest %s", gnmiSet.String())
-	_, err = i.GnmiClient.Set(ctx, gnmiSet)
-
-	return err
-}
-
-// gnmiGetSubscriberUeImsi returns an instance of Subscriber_Ue_Imsi.
-func (i *ServerImpl) gnmiGetSubscriberUeImsi(ctx context.Context,
-	openApiPath string, target types.Target, args ...string) (*types.SubscriberUeImsi, error) {
-
-	gnmiGet, err := utils.NewGnmiGetRequest(openApiPath, string(target), args...)
-	if err != nil {
-		return nil, err
-	}
-	log.Infof("gnmiGetRequest %s", gnmiGet.String())
-	gnmiJsonVal, err := utils.GetResponseUpdate(i.GnmiClient.Get(ctx, gnmiGet))
-	if err != nil {
-		return nil, err
-	}
-	if gnmiJsonVal == nil {
-		return nil, nil
-	}
-
-	log.Infof("gNMI Json %s", string(gnmiJsonVal.JsonVal))
-	var gnmiResponse modelplugin.Device
-	if err = modelplugin.Unmarshal(gnmiJsonVal.JsonVal, &gnmiResponse); err != nil {
-		return nil, fmt.Errorf("error unmarshalling gnmiResponse %v", err)
-	}
-	mpd := ModelPluginDevice{
-		device: gnmiResponse,
-	}
-
-	return mpd.toSubscriberUeImsi(args...)
-}
-
-// gnmiPostSubscriberUeImsi adds an instance of Subscriber_Ue_Imsi.
-func (i *ServerImpl) gnmiPostSubscriberUeImsi(ctx context.Context, body []byte,
-	openApiPath string, target types.Target, args ...string) (*string, error) {
-
-	jsonObj := new(types.SubscriberUeImsi)
-	if err := json.Unmarshal(body, jsonObj); err != nil {
-		return nil, fmt.Errorf("unable to unmarshal JSON as types.Subscriber_Ue_Imsi %v", err)
-	}
-	gnmiUpdates, err := encodeToGnmiSubscriberUeImsi(jsonObj, false, "", args...)
-	if err != nil {
-		return nil, fmt.Errorf("unable to convert types.SubscriberUeImsi to gNMI %v", err)
-	}
-	gnmiSet, err := utils.NewGnmiSetUpdateRequestUpdates(openApiPath, string(target), gnmiUpdates, args...)
-	if err != nil {
-		return nil, err
-	}
-	log.Infof("gnmiSetRequest %s", gnmiSet.String())
-	gnmiSetResponse, err := i.GnmiClient.Set(ctx, gnmiSet)
-	if err != nil {
-		return nil, fmt.Errorf(" %v", err)
-	}
-	return utils.ExtractExtension100(gnmiSetResponse), nil
-}
-
-// gnmiDeleteSubscriberUeImsiRange deletes an instance of Subscriber_Ue_Imsi_Range.
-func (i *ServerImpl) gnmiDeleteSubscriberUeImsiRange(ctx context.Context,
-	openApiPath string, target types.Target, args ...string) error {
-
-	gnmiSet, err := utils.NewGnmiSetDeleteRequest(openApiPath, string(target), args...)
-	if err != nil {
-		return err
-	}
-	log.Infof("gnmiSetRequest %s", gnmiSet.String())
-	_, err = i.GnmiClient.Set(ctx, gnmiSet)
-
-	return err
-}
-
-// gnmiGetSubscriberUeImsiRange returns an instance of Subscriber_Ue_Imsi_Range.
-func (i *ServerImpl) gnmiGetSubscriberUeImsiRange(ctx context.Context,
-	openApiPath string, target types.Target, args ...string) (*types.SubscriberUeImsiRange, error) {
-
-	gnmiGet, err := utils.NewGnmiGetRequest(openApiPath, string(target), args...)
-	if err != nil {
-		return nil, err
-	}
-	log.Infof("gnmiGetRequest %s", gnmiGet.String())
-	gnmiJsonVal, err := utils.GetResponseUpdate(i.GnmiClient.Get(ctx, gnmiGet))
-	if err != nil {
-		return nil, err
-	}
-	if gnmiJsonVal == nil {
-		return nil, nil
-	}
-
-	log.Infof("gNMI Json %s", string(gnmiJsonVal.JsonVal))
-	var gnmiResponse modelplugin.Device
-	if err = modelplugin.Unmarshal(gnmiJsonVal.JsonVal, &gnmiResponse); err != nil {
-		return nil, fmt.Errorf("error unmarshalling gnmiResponse %v", err)
-	}
-	mpd := ModelPluginDevice{
-		device: gnmiResponse,
-	}
-
-	return mpd.toSubscriberUeImsiRange(args...)
-}
-
-// gnmiPostSubscriberUeImsiRange adds an instance of Subscriber_Ue_Imsi_Range.
-func (i *ServerImpl) gnmiPostSubscriberUeImsiRange(ctx context.Context, body []byte,
-	openApiPath string, target types.Target, args ...string) (*string, error) {
-
-	jsonObj := new(types.SubscriberUeImsiRange)
-	if err := json.Unmarshal(body, jsonObj); err != nil {
-		return nil, fmt.Errorf("unable to unmarshal JSON as types.Subscriber_Ue_Imsi_Range %v", err)
-	}
-	gnmiUpdates, err := encodeToGnmiSubscriberUeImsiRange(jsonObj, false, "", args...)
-	if err != nil {
-		return nil, fmt.Errorf("unable to convert types.SubscriberUeImsiRange to gNMI %v", err)
-	}
-	gnmiSet, err := utils.NewGnmiSetUpdateRequestUpdates(openApiPath, string(target), gnmiUpdates, args...)
-	if err != nil {
-		return nil, err
-	}
-	log.Infof("gnmiSetRequest %s", gnmiSet.String())
-	gnmiSetResponse, err := i.GnmiClient.Set(ctx, gnmiSet)
-	if err != nil {
-		return nil, fmt.Errorf(" %v", err)
-	}
-	return utils.ExtractExtension100(gnmiSetResponse), nil
-}
-
-// gnmiDeleteSubscriberUeImsiWildcard deletes an instance of Subscriber_Ue_Imsi_Wildcard.
-func (i *ServerImpl) gnmiDeleteSubscriberUeImsiWildcard(ctx context.Context,
-	openApiPath string, target types.Target, args ...string) error {
-
-	gnmiSet, err := utils.NewGnmiSetDeleteRequest(openApiPath, string(target), args...)
-	if err != nil {
-		return err
-	}
-	log.Infof("gnmiSetRequest %s", gnmiSet.String())
-	_, err = i.GnmiClient.Set(ctx, gnmiSet)
-
-	return err
-}
-
-// gnmiGetSubscriberUeImsiWildcard returns an instance of Subscriber_Ue_Imsi_Wildcard.
-func (i *ServerImpl) gnmiGetSubscriberUeImsiWildcard(ctx context.Context,
-	openApiPath string, target types.Target, args ...string) (*types.SubscriberUeImsiWildcard, error) {
-
-	gnmiGet, err := utils.NewGnmiGetRequest(openApiPath, string(target), args...)
-	if err != nil {
-		return nil, err
-	}
-	log.Infof("gnmiGetRequest %s", gnmiGet.String())
-	gnmiJsonVal, err := utils.GetResponseUpdate(i.GnmiClient.Get(ctx, gnmiGet))
-	if err != nil {
-		return nil, err
-	}
-	if gnmiJsonVal == nil {
-		return nil, nil
-	}
-
-	log.Infof("gNMI Json %s", string(gnmiJsonVal.JsonVal))
-	var gnmiResponse modelplugin.Device
-	if err = modelplugin.Unmarshal(gnmiJsonVal.JsonVal, &gnmiResponse); err != nil {
-		return nil, fmt.Errorf("error unmarshalling gnmiResponse %v", err)
-	}
-	mpd := ModelPluginDevice{
-		device: gnmiResponse,
-	}
-
-	return mpd.toSubscriberUeImsiWildcard(args...)
-}
-
-// gnmiPostSubscriberUeImsiWildcard adds an instance of Subscriber_Ue_Imsi_Wildcard.
-func (i *ServerImpl) gnmiPostSubscriberUeImsiWildcard(ctx context.Context, body []byte,
-	openApiPath string, target types.Target, args ...string) (*string, error) {
-
-	jsonObj := new(types.SubscriberUeImsiWildcard)
-	if err := json.Unmarshal(body, jsonObj); err != nil {
-		return nil, fmt.Errorf("unable to unmarshal JSON as types.Subscriber_Ue_Imsi_Wildcard %v", err)
-	}
-	gnmiUpdates, err := encodeToGnmiSubscriberUeImsiWildcard(jsonObj, false, "", args...)
-	if err != nil {
-		return nil, fmt.Errorf("unable to convert types.SubscriberUeImsiWildcard to gNMI %v", err)
-	}
-	gnmiSet, err := utils.NewGnmiSetUpdateRequestUpdates(openApiPath, string(target), gnmiUpdates, args...)
-	if err != nil {
-		return nil, err
-	}
-	log.Infof("gnmiSetRequest %s", gnmiSet.String())
-	gnmiSetResponse, err := i.GnmiClient.Set(ctx, gnmiSet)
-	if err != nil {
-		return nil, fmt.Errorf(" %v", err)
-	}
-	return utils.ExtractExtension100(gnmiSetResponse), nil
-}
-
 // gnmiDeleteSubscriberUeProfiles deletes an instance of Subscriber_Ue_Profiles.
 func (i *ServerImpl) gnmiDeleteSubscriberUeProfiles(ctx context.Context,
 	openApiPath string, target types.Target, args ...string) error {
@@ -1692,9 +1491,6 @@ type Translator interface {
 	toSecurityProfileSecurityProfile(args ...string) (*types.SecurityProfileSecurityProfile, error)
 	toSubscriber(args ...string) (*types.Subscriber, error)
 	toSubscriberUe(args ...string) (*types.SubscriberUe, error)
-	toSubscriberUeImsi(args ...string) (*types.SubscriberUeImsi, error)
-	toSubscriberUeImsiRange(args ...string) (*types.SubscriberUeImsiRange, error)
-	toSubscriberUeImsiWildcard(args ...string) (*types.SubscriberUeImsiWildcard, error)
 	toSubscriberUeProfiles(args ...string) (*types.SubscriberUeProfiles, error)
 	toSubscriberUeProfilesAccessProfile(args ...string) (*types.SubscriberUeProfilesAccessProfile, error)
 	toSubscriberUeServingPlmn(args ...string) (*types.SubscriberUeServingPlmn, error)
